--- a/web/styles/circleStyle.css
+++ b/web/styles/circleStyle.css
@@ -1,11 +1,14 @@
 
-.circle {
+.circle, .circleSpeak {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translateX(-50%) translateY(-50%);
     width: 200px;
     height: 200px;
+
+    transition: all;
+    transition-duration: 1s;
 }
 
 .circle:before {
@@ -22,6 +25,24 @@
     
     animation-name: pulseRingIdle;
     animation-duration: 6s;
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-iteration-count: infinite;
+}
+
+.circleSpeak:before {
+    content: '';
+    position: relative;
+    display: block;
+    width: 200%;
+    height: 200%;
+    box-sizing: border-box;
+    margin-left: -50%; 
+    margin-top: -50%;
+    border-radius: 50%;
+    background-color: var(--light-color);
+    
+    animation-name: pulseRingSpeak;
+    animation-duration: 1s;
     animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
     animation-iteration-count: infinite;
 }
@@ -44,6 +65,24 @@
     animation-iteration-count: infinite;
 }
 
+.circleSpeak:after {
+    content: '';
+    position: absolute;
+    left: 0; 
+    top: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: var(--main-text-color);
+    border-radius: 50%;
+    box-shadow: 0 0 8px rgba(0,0,0,.3);
+
+    animation-name: pulseDotIdle;
+    animation-duration: 1s;
+    animation-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
+    animation-iteration-count: infinite;
+}
+
   
 @keyframes pulseRingIdle {
     0% {
@@ -53,6 +92,16 @@
       opacity: 0;
     }
 }
+
+@keyframes pulseRingSpeak {
+    0% {
+        transform: scale(0.1);
+    }
+    80%, 100% {
+        opacity: 0;
+        transform: scale(2);
+    }
+}
   
 @keyframes pulseDotIdle {
     0% {
@@ -60,6 +109,18 @@
     }
     50% {
       transform: scale(1);
+    }
+    100% {
+      transform: scale(.9);
+    }
+}
+
+@keyframes pulseDotSpeak {
+    0% {
+      transform: scale(.9);
+    }
+    50% {
+      transform: scale(1.2);
     }
     100% {
       transform: scale(.9);
