--- a/web/styles/circleStyle.css
+++ b/web/styles/circleStyle.css
@@ -11,7 +11,7 @@
     transition-duration: 1s;
 }
 
-.circle:before {
+.circle:before, .circleSpeak:before {
     content: '';
     position: relative;
     display: block;
@@ -22,32 +22,23 @@
     margin-top: -50%;
     border-radius: 50%;
     background-color: var(--light-color);
-    
+}
+
+.circle::before {
     animation-name: pulseRingIdle;
     animation-duration: 6s;
     animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
     animation-iteration-count: infinite;
 }
 
-.circleSpeak:before {
-    content: '';
-    position: relative;
-    display: block;
-    width: 200%;
-    height: 200%;
-    box-sizing: border-box;
-    margin-left: -50%; 
-    margin-top: -50%;
-    border-radius: 50%;
-    background-color: var(--light-color);
-    
+.circleSpeak:before {    
     animation-name: pulseRingSpeak;
     animation-duration: 1s;
     animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
     animation-iteration-count: infinite;
 }
     
-.circle:after {
+.circle:after, .circleSpeak:after {
     content: '';
     position: absolute;
     left: 0; 
@@ -58,7 +49,9 @@
     background-color: var(--main-text-color);
     border-radius: 50%;
     box-shadow: 0 0 8px rgba(0,0,0,.3);
+}
 
+.circle:after {
     animation-name: pulseDotIdle;
     animation-duration: 6s;
     animation-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
@@ -66,17 +59,6 @@
 }
 
 .circleSpeak:after {
-    content: '';
-    position: absolute;
-    left: 0; 
-    top: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-color: var(--main-text-color);
-    border-radius: 50%;
-    box-shadow: 0 0 8px rgba(0,0,0,.3);
-
     animation-name: pulseDotIdle;
     animation-duration: 1s;
     animation-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
